config/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: microfrontends-webui
spec:
  type: ClusterIP
  selector:
    pod: microfrontends-webui-label
  ports:
  - name: webapi-s-port
    protocol: TCP
    port: 80
    targetPort: 8082
