config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microfrontends-webui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /microfrontends-ui(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: microfrontends-webui
            port:
              number: 80
